Updated JVM settings, added sample results with notes